@@ -1,5 +1,7 @@
 2010-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* utils/urlgetautoproxy.py: Added new class UrlgetWithAutoProxy.
+	  Code refactoring.  pacparser -> libproxy.
 	* flickr/__init__.py, api.py: Added new gconf key 
 	  'plugins/flickr/interval_for_meta_group'.
 	* flickr/api.py: Added a random group pickup method among 'The Commons'.
@@ -171,6 +173,7 @@
 
 2010-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* proxypac.py: Added support for proxy pac.
 	* menu.py: Always show the image of menu items.
 	* plugins/*: Added Icons to Plugins Treeview.
 
